# SaYibot_model

./: README.md  config.yml  device.json  help.py  main.py  sample.py  session.token  txlib_version.json
SaYi/: .env  .env.dev  README.md  bot.py  pyproject.toml  requirements.txt
SaYi/src/: __init__.py
SaYi/src/Bot_is_online/: __init__.py  update.json
SaYi/src/add_image/: __init__.py  image.json
SaYi/src/audio_processor/: __init__.py  test.bat  text.json
SaYi/src/broadcast/: __init__.py
SaYi/src/codeforces/: __init__.py  data_source.py
SaYi/src/daliy/: __init__.py
SaYi/src/dataset_controller/: __init__.py  library.json
SaYi/src/global_message_encoding/: __init__.py
SaYi/src/help/: __init__.py
SaYi/src/luogu_question/: __init__.py  data_source.py
SaYi/src/mai2_pcount/: __init__.py
SaYi/src/notebook/: __init__.py
SaYi/src/people/: __init__.py
SaYi/src/people_is_online/: __init__.py
SaYi/src/plugins/Bot_is_online/: __init__.py  update.json
SaYi/src/plugins/XinHuo-chat/: __init__.py
SaYi/src/plugins/add_image/: __init__.py  image.json
SaYi/src/plugins/broadcast/: __init__.py
SaYi/src/plugins/codeforces/: __init__.py  data_source.py
SaYi/src/plugins/daliy/: __init__.py
SaYi/src/plugins/dataset_controller/: __init__.py  library.json
SaYi/src/recent_contests/: __init__.py  data_source.py
SaYi/src/search_images/: __init__.py  data.py
SaYi/src/songpicker/: __init__.py  data_source.py
SaYi/src/time_freezer/: __init__.py  config.json  job_list.json
SaYi/src/weather_show/: __init__.py
SaYi/src/web_processor/: __init__.py
(+38 files in other folders)
