[project]
name = "SaYi"
version = "0.1.0"
description = "SaYi"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_analysis_bilibili", "nonebot_plugin_whateat_pic"]
plugin_dirs = []
builtin_plugins = ["echo"]
